# automation-reports

./: .editorconfig  .env.example  .env.exmple  .env.sh  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  REQUIREMENTS.md  clusters.example.yaml  eslint.config.js  i18next-parser.config.cjs  instances.example.yaml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-build-tools-compat.txt  requirements-build-tools.txt  requirements-build.txt  requirements-pinned.txt  requirements.txt  requirements_dev.txt  requirements_dev_licenses.txt  rpms.in.yaml  rpms.lock.yaml  sonar-project.properties  stylePaths.js  sync-licenses.sh  sync-requirements.sh  tsconfig.json  vite.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
.tekton/: automation-reports-pull-request.yaml  automation-reports-push.yaml
compose/: compose.dev-override.yml  compose.yml  init-db-public.sh  init-db.sh  redis.conf
docker/: .gitignore  Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.frontend  Dockerfile.frontend.dockerignore  launch_automation_dashboard.sh  launch_automation_reporter.sh  launch_awx_rsyslog.sh  nginx.conf  supervisord_dashboard_web.conf  supervisord_reporter_web.conf
docs/: 01-system-architecture.md  02-data-sync-architecture.md  03-analytics-reporting.md  04-api-architecture.md  05-frontend-architecture.md  06-database-schema.md  07-deployment-architecture.md  08-security-architecture.md  09-release-process.md  10-translations.md  README.md
licenses/: licenses.md
requirements/: overrides.txt  (+2 more)
(+515 files in other folders)
